# neuromancer

./: AGENTS.md  PLANS.md
.github/workflows/: alicia-ci.yml  codespell.yml  rust-ci.yml  rust-release-windows.yml  rust-release.yml  sdk.yml  shell-tool-mcp.yml
Alicia/: 00-plano-mestre.md  01-arquitetura-tecnica.md  02-seguranca-e-permissoes.md  03-ux-produto.md  04-roadmap-estimativas.md  05-riscos-mitigacoes.md  06-backlog-mvp.md  07-plano-release-oss.md  08-plano-execucao-sprints.md  09-backlog-issues-mvp.md  10-contratos-tecnicos-v1.md  11-mapa-reuso-codex.md  12-guia-mvp-instalacao-troubleshooting-checklist.md  13-pr-mvp-018-020.md  13-ui-command-config-matrix.md  14-fluxo-desenvolvimento-execplan.md  15-notas-release-candidata-mvp-018-020.md  README.md  package.json
Alicia/_execplans/: 2026-02-18-alicia-mvp-018-020-fechamento-release.md
Alicia/backend/: AGENTS.md  Cargo.toml  tauri.conf.json
Alicia/backend/capabilities/: default.json
Alicia/backend/src/: account_runtime.rs  app_server_runtime.rs  bridge_runtime.rs  command_runtime.rs  config_runtime.rs  events_runtime.rs  launch_runtime.rs  main.rs  mcp_runtime.rs  models_runtime.rs  session_lifecycle_runtime.rs  session_runtime.rs  session_turn_runtime.rs  status_runtime.rs  terminal_runtime.rs
Alicia/backend/src/status_runtime/: fetch.rs  format.rs  rate_limit_snapshot.rs
Alicia/codex-bridge/: AGENTS.md  index.mjs  package.json  pnpm-lock.yaml
Alicia/egui-rust-integration/app/: globals.css  layout.tsx  page.tsx
Alicia/egui-rust-integration/components/alicia/: boot-screen.tsx  command-input.tsx  diff-viewer.tsx  sidebar.tsx  status-bar.tsx  terminal-message.tsx  title-bar.tsx
Alicia/execplans/: 2026-02-18-alicia-mvp-013-tauri-codex-backend-bridge.md  2026-02-18-alicia-mvp-015-017-react-tauri-bridge.md  2026-02-18-alicia-mvp-018-020-fechamento-release.md  2026-02-18-alicia-p1-025-governanca-oss.md
Alicia/frontend/: AGENTS.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
Alicia/frontend/app/: globals.css  layout.tsx  page.tsx
Alicia/frontend/components/alicia/: agent-spawner.tsx  approval-request.tsx  apps-panel.tsx  boot-screen.tsx  command-input.tsx  command-palette.tsx  conversation-pane.tsx  diff-viewer.tsx  mcp-panel.tsx  model-picker-parts.tsx  model-picker.tsx  permissions-panel.tsx  review-mode.tsx  session-picker.tsx  sidebar.tsx  status-bar.tsx  status-snapshot-card.tsx  status-snapshot-parser.ts  status-snapshot-view.tsx  terminal-message.tsx  terminal-pane.tsx  title-bar.tsx  user-input-request.tsx
Alicia/frontend/components/ui/: sidebar-context.tsx  sidebar-layout.tsx  sidebar-menu.tsx  sidebar.tsx
Alicia/frontend/hooks/: use-alicia-actions.ts  use-alicia-bootstrap.ts  use-alicia-runtime-core.ts  use-alicia-terminal-runtime.ts
Alicia/frontend/lib/: agent-spawner-events.ts  alicia-event-handlers.ts  alicia-runtime-helpers.ts  alicia-types.ts  runtime-statusline.ts  tauri-bridge.ts
Alicia/frontend/lib/tauri-bridge/: commands.ts  listeners.ts  types.ts
codex/: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
codex-rs/: Cargo.toml
codex-rs/.codex/: alicia-enforce-smoke-20260218.jsonl  alicia-smoke-audit-sync.jsonl
codex-rs/alicia-adapters/src/: lib.rs
codex-rs/alicia-adapters/tests/: real_provider_smoke.rs
codex-rs/alicia-core/: Cargo.toml
codex-rs/alicia-core/src/: audit.rs  ipc.rs  lib.rs  policy_bridge.rs  session.rs
codex-rs/alicia-ui/: Cargo.toml
codex-rs/alicia-ui/src/: lib.rs  main.rs
codex-rs/alicia-ui/tests/: e2e_flow.rs
codex-rs/core/: Cargo.toml
codex/.agent/: PLANS.md
codex/.github/workflows/: alicia-ci.yml  bazel.yml  cargo-deny.yml  ci.yml  rust-ci.yml  sdk.yml
codex/codex-rs/: Cargo.toml
codex/codex-rs/.codex/: alicia-audit-smoke-20260218.jsonl  alicia-audit.jsonl
codex/codex-rs/alicia-adapters/: Cargo.toml
codex/codex-rs/alicia-adapters/src/: lib.rs
codex/codex-rs/alicia-adapters/tests/: real_provider_smoke.rs
codex/codex-rs/alicia-core/src/: policy.rs  (+2 more)
codex/codex-rs/tui/: Cargo.toml
docs/: 1_review-ux-v2-plan-implementation-scope.md  2_review-ux-v2-implementation-plan.md  3_review-ux-v2-exec-plan.md
(+8 files in other folders)
