[package]
name = "alicia-egui-tauri-backend"
version = "0.1.0"
edition = "2021"
description = "Tauri backend bridge for AlicIA codex CLI integration"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.8"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "time"] }
toml = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
